Thu Nov 29 10:29:53 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c: same as a last patch.

Thu Nov 29 10:24:25 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c: use `long' for return values of `NUM2LONG()'.

Thu Nov 29 09:52:08 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (do_select): suppress warning (uninitialized value warning)
	  with UNINITIALIZED_VAR().

Thu Nov 29 09:36:09 2012  Koichi Sasada  <ko1@atdot.net>

	* eval.c (ruby_cleanup): delay THREAD_KILLED timing.
	  It should be located just before rb_thread_terminate_all().

Thu Nov 29 09:10:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (vm_backtrace_to_ary): support range argument
	  like Array#[].
	  [ruby-core:50092] [ruby-trunk - Feature #7434]
	  Test and document is not available. Please help us.

Thu Nov 29 06:46:33 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_start_func_2): small cleanups.

Thu Nov 29 06:37:08 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_start_func_2): remove unused code.
	  this function never be used for main thread.

Thu Nov 29 06:27:55 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_start_func_2): remove unused code.
	  errinfo = th->errinfo; and errinfo = rb_errinfo(); are
	  the same.

Thu Nov 29 05:26:32 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (backtrace_to_str_ary2): rename to backtrace_to_str_ary.

	* vm_backtrace.c (rb_backtrace_to_str_ary): use `backtrace_to_str_ary()'.

	* vm_backtrace.c (backtrace_to_frame_ary): rename to
	  backtrace_to_location_ary.

Thu Nov 29 05:19:25 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* probes.d: Change function-entry probe to method-entry.
	* insns.def: ditto
	* probes_helper.h: ditto
	* test/dtrace/test_function_entry.rb: ditto
	* test/dtrace/test_singleton_function.rb: ditto
	* vm.c: ditto
	* vm_eval.c: ditto
	* vm_insnhelper.c: ditto

Thu Nov 29 04:45:17 2012  Koichi Sasada  <ko1@atdot.net>
