@@ -491,16 +491,15 @@ thread_start_func_2(rb_thread_t *th, VALUE *stack_start, VALUE *register_stack_s
 	    if (state == TAG_FATAL) {
 		/* fatal error within this thread, need to stop whole script */
 	    }
-	    else if (rb_obj_is_kind_of(errinfo, rb_eSystemExit)) {
-		if (th->safe_level >= 4) {
-		    th->errinfo = rb_exc_new3(rb_eSecurityError,
-					      rb_sprintf("Insecure exit at level %d", th->safe_level));
-		    errinfo = Qnil;
-		}
+	    else if (th->safe_level >= 4) {
+		/* Ignore it. Main thread shouldn't be harmed from untrusted thread. */
+		errinfo = Qnil;
 	    }
-	    else if (th->safe_level < 4 &&
-		     (th->vm->thread_abort_on_exception ||
-		      th->abort_on_exception || RTEST(ruby_debug))) {
+	    else if (rb_obj_is_kind_of(errinfo, rb_eSystemExit)) {
+		/* exit on main_thread. */
+	    }
+	    else if (th->vm->thread_abort_on_exception ||
+		     th->abort_on_exception || RTEST(ruby_debug)) {
 		/* exit on main_thread */
 	    }
 	    else {
