@@ -1,3 +1,9 @@
+Thu Nov 29 11:06:06 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* thread.c (thread_start_func_2): remove unused code. When
+	  th->safe_level == 4, th->errinfo never be thrown. So, to
+	  create new exception makes no sense.
+
 Thu Nov 29 10:29:53 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_backtrace.c: same as a last patch.
